[package]
name = "x264"
description = "Encoding H.264 video."
keywords = ["x264", "encoding", "h264", "video", "encoder"]
repository = "https://github.com/quadrupleslap/x264"
documentation = "https://docs.rs/x264"
license = "MIT"
version = "0.3.0"
authors = ["Ram <quadrupleslap@gmail.com>"]

[dependencies]
anyhow = { version = "^1.0", optional = true }
x264-sys = { git = "https://github.com/rust-av/x264-rs.git", rev = "5816190" }

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
no_std = []
